--- a/index.html
+++ b/index.html
@@ -2,473 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Philipp Tutoring</title>
-  <meta name="description" content="Premium A Level tutoring in Maths, Further Maths, Physics, and Computer Science.">
-  <meta name="theme-color" content="#c65a72">
-
-  <!-- Fonts: IBM Plex family -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=IBM+Plex+Sans:wght@700&family=IBM+Plex+Serif:wght@400;500&display=swap" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=IBM+Plex+Sans:wght@700&family=IBM+Plex+Serif:wght@400;500&display=swap"></noscript>
-
-  <!-- Single SVG favicon -->
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYTSZ8BF4Z"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-ZYTSZ8BF4Z');
-  </script>
-
-  <!-- LCP to GA4 (unchanged) -->
-  <script>
-  (function () {
-    if (!('PerformanceObserver' in window)) return;
-    let lcpEntry;
-    const po = new PerformanceObserver((list) => {
-      const entries = list.getEntries();
-      lcpEntry = entries[entries.length - 1];
-    });
-    try { po.observe({ type: 'largest-contentful-paint', buffered: true }); } catch (_) {}
-    function reportLCP() {
-      if (!lcpEntry || typeof gtag !== 'function') return;
-      const lcp_ms = Math.round(lcpEntry.startTime);
-      const lcp_s = +(lcp_ms / 1000).toFixed(3);
-      gtag('event', 'lcp', {
-        value: lcp_ms,
-        lcp_value: lcp_ms,
-        lcp_seconds: lcp_s,
-        element: lcpEntry.element && lcpEntry.element.tagName
-                 ? lcpEntry.element.tagName.toLowerCase() : undefined,
-        url: lcpEntry.url || location.pathname,
-        size: lcpEntry.size || undefined,
-        id: 'lcp-' + Math.random().toString(36).slice(2),
-        transport_type: 'beacon'
-      });
-    }
-    addEventListener('pagehide', reportLCP, { once: true });
-    addEventListener('visibilitychange', function () {
-      if (document.visibilityState === 'hidden') reportLCP();
-    }, { once: true });
-  })();
-  </script>
-
-  <style>
-    :root{
-      --mulberry:#c65a72; /* brand accent */
-      --stone:#cbd5e1;    /* undertones */
-      --paper:#f7f5f2;    /* background */
-      --teal:#0d9488;     /* positive highlights */
-      --ink:#0b1f3a;      /* primary text */
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      background:var(--paper);
-      color:var(--ink);
-      font-family:"IBM Plex Serif", ui-serif, Georgia, serif;
-      -webkit-font-smoothing:antialiased;
-      text-rendering:optimizeLegibility;
-    }
-    h1,h2,h3,h4,h5,h6{
-      font-family:"IBM Plex Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
-      font-weight:700;
-    }
-    .stat, code, kbd, pre{
-      font-family:"IBM Plex Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-    }
-
-    /* Clickable brand mark */
-    .brand-mark{
-      position:fixed;
-      top:16px;
-      left:16px;
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      padding:6px;                 /* room for the rounded rect */
-      border-radius:12px;
-      line-height:0;
-      -webkit-tap-highlight-color: transparent;
-      z-index: 10;                 /* keep above hero gradients */
-    }
-    .brand-mark img{width:32px;height:32px;display:block}
-
-    /* Rounded rectangle that appears only on hover/active */
-    .brand-mark::before{
-      content:"";
-      position:absolute;
-      inset:0;
-      border-radius:12px;
-      background: rgba(198, 90, 114, 0.18); /* mulberry with opacity */
-      opacity:0;
-      transition: opacity .15s ease-in-out;
-      pointer-events:none;
-    }
-    .brand-mark:hover::before{ opacity:1; }          /* visible on hover */
-    .brand-mark:active::before{ opacity:0.10; }      /* lighter while pressed */
-
-    /* Keep accessibility: show focus ring for keyboard nav only */
-    .brand-mark:focus-visible{
-      outline:2px solid var(--mulberry);
-      outline-offset:4px;
-      border-radius:12px;
-    }
-
-    /* --- Hero section --- */
-    .hero{
-      background-color: var(--paper);
-      background:
-        linear-gradient(135deg,
-          rgba(198,90,114,0.12) 0%,
-          rgba(198,90,114,0.06) 40%,
-          rgba(198,90,114,0.00) 70%),
-        var(--paper);
-      /* Full-viewport height with modern mobile-safe units + fallbacks */
-      min-height: 100vh;
-      min-height: 100svh;
-      min-height: 100dvh;
-      display: flex;
-      align-items: center;
-      /* modest vertical breathing room so content isn't glued to edges on tiny screens */
-      padding-block: clamp(24px, 4vh, 64px);
-      margin-top: 0;
-      position: relative;
-    }
-    .hero-inner{
-      max-width: 1240px;
-      margin: 0 auto;
-      padding: 0 16px;
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 28px;
-      align-items: center;
-    }
-    @media (min-width: 900px){
-      .hero-inner{
-        grid-template-columns: 1.35fr 0.65fr; /* wider text column */
-        gap: 48px;
-      }
-    }
-    .hero-left{
-      color: var(--ink);
-    }
-    /* On small screens, push the text down so it doesn't overlap the top-left brand mark */
-    @media (max-width: 700px){
-      .hero-left{
-        margin-top: calc(72px + env(safe-area-inset-top, 0px)); /* ~favicon height + breathing room */
-      }
-    }
-    .overline{
-      margin: 0 0 8px 0;
-      font-family: "IBM Plex Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
-      font-weight: 700;
-      font-size: 16px;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
-      color: rgba(11,31,58,0.75);
-      display: inline-block;
-      padding: 6px 12px;
-      background: rgba(247,245,242,0.96);
-      border: 1px solid rgba(11,31,58,0.10);
-      border-radius: 999px; /* paper pill */
-      box-shadow: 0 4px 14px rgba(11,31,58,0.06);
-      cursor: pointer;
-      user-select: none;
-      text-decoration: none;
-      transition: opacity .15s ease, border-color .15s ease, box-shadow .15s ease;
-    }
-    .overline--stone{
-      background: var(--stone); /* full stone */
-      border-color: rgba(11,31,58,0.12);
-      color: rgba(11,31,58,0.70);
-      margin-left: 8px; /* sits to the right of CORE TRACK */
-    }
-    .overline.is-inactive{ opacity: .4; }
-    .overline.is-active{ opacity: 1; }
-    .overline.is-inactive:hover{
-      opacity: 1;
-      border-color: var(--ink);
-      box-shadow: 0 6px 16px rgba(11,31,58,0.08);
-    }
-    .overline:focus-visible{
-      outline: 2px solid var(--mulberry);
-      outline-offset: 2px;
-    }
-    .hero-title{
-      margin: 0 0 12px 0;
-      font-size: calc(clamp(32px, 5vw, 56px) - 4px);
-      line-height: 1.1;
-      letter-spacing: -0.01em;
-    }
-    .u-underline{ position: relative; display: inline-block; z-index: 0; }
-    .u-underline::after{
-      content: "";
-      position: absolute;
-      left: -10%; right: -5%;   /* 115% width (7.5% overflow on each side) */
-      bottom: -1.25em;          /* sits under the baseline */
-      height: 2.25em;           /* very thick underline */
-      background: url('/assets/underline.avif') left bottom / 100% 100% no-repeat;
-      z-index: -1;              /* behind the glyphs */
-      pointer-events: none;
-    }
-    .proofs{
-      margin: 0 0 20px 0;
-      padding: 0;
-      list-style: none;
-    }
-    .proofs li{
-      display: flex;
-      align-items: baseline;
-      gap: 10px;
-      margin: 8px 0;
-      font-size: clamp(14px, 2.2vw, 16px);
-    }
-    .proofs li::before{
-      content: "✓";
-      font-family: "IBM Plex Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
-      font-weight: 700;
-      color: var(--teal);
-    }
-    .btn-primary{
-      display: inline-block;
-      padding: 12px 18px;
-      border-radius: 12px;
-      background: var(--mulberry);
-      color: var(--paper);
-      border: 1px solid rgba(11,31,58,0.10);
-      text-decoration: none;
-      font-family: "IBM Plex Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
-      font-weight: 700;
-      letter-spacing: 0.01em;
-
-      /* new ambient shadow */
-      box-shadow: 0 10px 24px rgba(11,31,58,0.18), 0 2px 6px rgba(11,31,58,0.10);
-      transition: transform .08s ease, box-shadow .15s ease;
-      will-change: transform, box-shadow;
-    }
-
-    .btn-primary:hover{
-      /* slight pressed on hover */
-      transform: translateY(1px);
-      box-shadow: 0 6px 16px rgba(11,31,58,0.16), 0 1px 4px rgba(11,31,58,0.10);
-    }
-
-    .btn-primary:active{
-      /* deeper press while mouse down */
-      transform: translateY(2px);
-      box-shadow: 0 3px 8px rgba(11,31,58,0.18), 0 1px 3px rgba(11,31,58,0.12);
-    }
-    .btn-primary:focus-visible{
-      outline: 2px solid var(--ink);
-      outline-offset: 3px;
-      border-radius: 12px;
-    }
-    .hero-sub{
-      margin: 8px 0 16px 0;
-      max-width: 56ch;
-      color: rgba(11,31,58,0.88);
-      font-size: clamp(19px, 2.34vw, 23px); /* +30% */
-    }
-    .trust-hook{
-      margin: 10px 0 18px 0;
-      font-family: "IBM Plex Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
-      font-weight: 700;
-      font-size: 16px; /* +15% */
-      letter-spacing: 0.06em;
-      color: rgba(11,31,58,0.85);
-      text-transform: none;
-    }
-    .cta-sub{
-      margin-top: 6px;
-      font-size: 14px;
-      color: rgba(11,31,58,0.65);
-    }
-    .cta{
-      display: inline-flex;
-      flex-direction: column;
-      align-items: center; /* centers the caption under the button width */
-    }
-
-    /* Bottom-center chevron cue */
-    .scroll-cue{
-      position: absolute;
-      left: 50%;
-      bottom: 16px;
-      transform: translateX(-50%);
-      width: 36px; height: 36px;
-      display: grid; place-items: center;
-      border-radius: 999px;
-      background: rgba(247,245,242,0.85); /* paper */
-      border: 1px solid rgba(11,31,58,0.12);
-      box-shadow: 0 6px 16px rgba(11,31,58,0.10);
-      cursor: pointer;
-      -webkit-tap-highlight-color: transparent;
-    }
-    .scroll-cue svg{ display:block; width:18px; height:18px; fill: var(--ink); opacity: .9; }
-    .scroll-cue:hover svg{ opacity: 1; }
-    .scroll-cue:focus-visible{ outline:2px solid var(--mulberry); outline-offset:3px; }
-
-    /* Stone background section extending below the hero */
-    .below{
-      background: var(--stone);
-      min-height: 200vh; /* 2× page height */
-    }
-
-    /* Hero text placeholders (structure only) */
-    .text-skeleton{ margin: 0 0 16px 0; }
-    .placeholder{
-      background: rgba(247,245,242,0.5); /* paper with transparency */
-      border: 1px solid rgba(11,31,58,0.12); /* subtle ink outline */
-      border-radius: 8px;
-    }
-    .text-skeleton .placeholder{
-      height:16px;
-      width:min(60%, 560px);
-      background: rgba(11,31,58,0.06);
-      border: 1px solid rgba(11,31,58,0.08);
-      border-radius:6px;
-    }
-    .title-skel{ height: clamp(28px, 4vw, 42px); width: min(85%, 720px); margin: 0 0 12px 0; }
-    .line{ height: 14px; margin: 8px 0; }
-    .w-80{ width: 80%; } .w-60{ width: 60%; } .w-40{ width: 40%; }
-
-    .proofs-skeleton{
-      display: flex; flex-wrap: wrap; gap: 10px;
-      padding: 0; margin: 12px 0 20px 0; list-style: none;
-    }
-    .proofs-skeleton .chip{
-      height: 28px; border-radius: 999px;
-      background: rgba(247,245,242,0.6);
-      border: 1px solid rgba(11,31,58,0.15);
-      width: clamp(90px, 18vw, 180px);
-    }
-    .hero-right{
-      justify-self: end;
-    }
-    @media (min-width: 1100px){
-      .hero-right{ transform: translateX(12px); } /* nudge image to the right */
-    }
-    .hero-right img{
-      width: 100%;
-      height: auto;
-      display: block;
-      filter: drop-shadow(0 18px 42px rgba(11,31,58,0.12));
-    }
-</style>
-  <link rel="preload" as="image" href="/assets/philipp-1200.avif" type="image/avif" imagesrcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w" imagesizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
-</head>
-<body>
-  <!-- Blank canvas: only the favicon in the top-left -->
-  <a class="brand-mark" href="#" aria-label="Philipp Tutoring home">
-    <img src="/favicon.svg" alt="Philipp favicon">
-  </a>
-  <section class="hero" role="banner">
-    <div class="hero-inner">
-      <div class="hero-left">
-        <a id="pill-core" class="overline is-active" href="./" data-gtag-event="track_switch" aria-label="Switch to Core track">Core track</a><a id="pill-specialist" class="overline overline--stone is-inactive" href="?track=specialist" data-gtag-event="track_switch" aria-label="Switch to Specialist track">Specialist track</a>
-        <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
-        <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
-        <div class="trust-hook">4×A* Imperial College Computing (AI) | 295/300 (98%) A Level Maths | BPhO Gold </div>
-        <div class="cta">
-          <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
-          <div class="cta-sub">No charge • 20 min</div>
-        </div>
-      </div>
-      <div class="hero-right">
-        <!-- Replace the src with your actual photo path -->
-        <picture>
-          <source type="image/avif" srcset="/assets/philipp-800.avif 800w, /assets/philipp-1200.avif 1200w, /assets/philipp-1800.avif 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
-          <source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
-          <img src="/assets/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
-        </picture>
-      </div>
-    </div>
-    <a class="scroll-cue" href="#more" aria-label="Scroll for more">
-      <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-        <path d="M6.7 9.3a1 1 0 0 1 1.4 0L12 13.2l3.9-3.9a1 1 0 1 1 1.4 1.4l-4.6 4.6a1 1 0 0 1-1.4 0L6.7 10.7a1 1 0 0 1 0-1.4z"/>
-      </svg>
-    </a>
-  </section>
-  <section id="more" class="below" aria-hidden="true"></section>
-
-  <script>
-    (function(){
-      const params = new URLSearchParams(location.search);
-      const specialistActive = params.get('track') === 'specialist';
-      const coreEl = document.getElementById('pill-core');
-      const specEl = document.getElementById('pill-specialist');
-      if (!coreEl || !specEl) return;
-
-      function setState(isSpecialist){
-        coreEl.classList.toggle('is-active', !isSpecialist);
-        coreEl.classList.toggle('is-inactive', isSpecialist);
-        specEl.classList.toggle('is-active', isSpecialist);
-        specEl.classList.toggle('is-inactive', !isSpecialist);
-        // Ensure links point to the correct destinations
-        coreEl.href = location.pathname; // core = default page
-        specEl.href = location.pathname + '?track=specialist'; // specialist = param route for now
-      }
-
-      setState(specialistActive);
-    })();
-  </script>
-  <!-- Optional: lightweight click tracking for future buttons/links -->
-  <script>
-    document.addEventListener('click', function(e) {
-      const el = e.target.closest('a,button');
-      if (!el) return;
-      const href = el.href || '';
-      const custom = el.dataset && el.dataset.gtagEvent;
-      if (custom) { gtag('event', custom); return; }
-      if (href.startsWith('mailto:')) gtag('event', 'contact_click', { method: 'email' });
-      else if (href.startsWith('tel:')) gtag('event', 'contact_click', { method: 'phone' });
-      else if (href.includes('wa.me') || href.includes('api.whatsapp.com')) gtag('event', 'contact_click', { method: 'whatsapp' });
-      else if (href.includes('calendly.com') || href.includes('cal.com')) gtag('event', 'book_consult_click', { destination: 'calendly' });
-    });
-
-    // Calendly inline completion tracker (future use)
-    window.addEventListener('message', function(evt) {
-      const d = evt.data || {};
-      if (typeof d !== 'object') return;
-      if (d.event === 'calendly.event_scheduled') {
-        const name = d?.payload?.event_type?.name || 'Consult';
-        gtag('event', 'calendly_scheduled', { event_name: name });
-      }
-    });
-  </script>
-</body>
-</html>
-
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Philipp Tutoring — Redirecting…</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="refresh" content="0; url=core.html">
   <link rel="canonical" href="core.html">
   <meta name="robots" content="noindex,follow">
   <script>
-    // JS fallback in case the meta refresh is blocked
-    (function(){ try { location.replace('core.html'); } catch(e){ location.href='core.html'; } })();
+    (function(){
+      try { location.replace('core.html'); }
+      catch (_) { location.href = 'core.html'; }
+    })();
   </script>
-  <style>
-    :root{ --paper:#f7f5f2; --ink:#0b1f3a; --mulberry:#c65a72; }
-    html,body{height:100%}
-    body{margin:0;display:grid;place-items:center;background:var(--paper);color:var(--ink);font:16px/1.4 system-ui,sans-serif}
-    .card{padding:16px 18px;border:1px solid rgba(11,31,58,.12);border-radius:12px}
-    a{color:var(--mulberry);font-weight:600;text-decoration:none}
-    a:hover{text-decoration:underline}
-  </style>
 </head>
-<body>
-  <div class="card">Redirecting to <a href="core.html">Core track</a>…</div>
-</body>
+<body aria-hidden="true"></body>
 </html>
