--- a/specialist.html
+++ b/specialist.html
@@ -45,7 +45,7 @@
         <p class="track-overline">Serious tuition for serious results.</p>
         <h1 class="hero-title">A Level Computer Science<br>and Further Maths,<br>taught for <span class="u-underline">mastery</span>.</h1>
         <p class="hero-sub">No guesswork: 5 performance indicators guarantee visible results.</p>
-        <div class="trust-hook">4×A* Imperial College Computing (AI) | Top 100 UK by CS A Level Results | 100% Core Pure 2</div>
+        <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level Results | 100% Core Pure 2</div>
 
         <div class="cta">
           <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
