--- a/specialist.html
+++ b/specialist.html
@@ -62,9 +62,7 @@
       </div>
     </div>
 
-    <a class="scroll-cue" href="#more" aria-label="Scroll for more">
-      <img src="/assets/scroll_chevron.svg" alt="" width="18" height="18" loading="lazy" aria-hidden="true">
-    </a>
+    <img class="scroll-chevron" src="/assets/scroll_chevron.svg" alt="" width="18" height="18" loading="lazy" aria-hidden="true">
   </section>
 
   <section id="more" class="below" aria-hidden="true"></section>
