--- a/specialist.html
+++ b/specialist.html
@@ -62,7 +62,9 @@
       </div>
     </div>
 
-    <img class="scroll-chevron" src="/assets/scroll_chevron.svg" alt="" width="320" height="320" loading="lazy" aria-hidden="true">
+    <a class="scroll-cue" href="#more" aria-label="Scroll for more">
+      <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M6.7 9.3a1 1 0 0 1 1.4 0L12 13.2l3.9-3.9a1 1 0 1 1 1.4 1.4l-4.6 4.6a1 1 0 0 1-1.4 0L6.7 10.7a1 1 0 0 1 0-1.4z"/></svg>
+    </a>
   </section>
 
   <section id="more" class="below" aria-hidden="true"></section>
