--- a/specialist.html
+++ b/specialist.html
@@ -47,6 +47,11 @@
         <p class="hero-sub">No guesswork: 5 performance indicators guarantee visible results.</p>
         <div class="trust-hook">4×A* | Imperial College Computing (AI) | Top 100 UK by CS A Level Results | 100% Core Pure 2</div>
 
+        <div class="cta">
+          <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
+          <div class="cta-sub">No charge • 20 min</div>
+        </div>
+
       </div>
 
       <div class="hero-right">
@@ -55,10 +60,6 @@
           <source type="image/webp" srcset="/assets/philipp-800.webp 800w, /assets/philipp-1200.webp 1200w, /assets/philipp-1800.webp 1800w" sizes="(max-width: 900px) 90vw, calc((min(1120px, 100vw) - 32px) * 0.45)">
           <img src="/assets/philipp-1200.webp" alt="Philipp Bogdan" width="1200" height="1600" loading="eager" fetchpriority="high">
         </picture>
-        <div class="cta cta--portrait">
-          <a class="btn-primary btn-primary--hero" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
-          <div class="cta-sub">No charge • 20 min</div>
-        </div>
       </div>
     </div>
 
