--- a/core.html
+++ b/core.html
@@ -69,12 +69,131 @@
       </div>
     </div>
 
-    <a class="scroll-cue" href="#more" aria-label="Scroll for more">
+    <a class="scroll-cue" href="#proof-extra" aria-label="Scroll for more">
       <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M6.7 9.3a1 1 0 0 1 1.4 0L12 13.2l3.9-3.9a1 1 0 1 1 1.4 1.4l-4.6 4.6a1 1 0 0 1-1.4 0L6.7 10.7a1 1 0 0 1 0-1.4z"/></svg>
     </a>
   </section>
 
-  <section id="more" class="below" aria-hidden="true"></section>
+  <main id="core-content">
+    <section id="proof-extra" class="section section-tight">
+      <div class="container">
+        <p class="eyebrow">Proof</p>
+        <ul class="badge-row">
+          <li class="badge">BMO Round 1 Distinction</li>
+          <li class="badge">Led Physics Olympiad Society</li>
+          <li class="badge">1.5+ years teaching</li>
+          <li class="badge">AIME qualifier (US)</li>
+        </ul>
+        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+      </div>
+    </section>
+
+    <section id="case" class="section section-tight">
+      <div class="container">
+        <p class="eyebrow">Case</p>
+        <h2>C to A in 8 weeks</h2>
+        <div class="case-grid">
+          <svg class="sparkline" viewBox="0 0 120 24" aria-label="Score progression">
+            <polyline fill="none" stroke="currentColor" stroke-width="2"
+              points="0,18 15,17 30,16 45,14 60,12 75,10 90,6 105,4"/>
+          </svg>
+          <ol class="steps tight">
+            <li>Week 0 baseline: 62 percent, slow algebra, timeouts.</li>
+            <li>Weeks 1–2: algebra drills, 20 min timers, method templates.</li>
+            <li>Weeks 3–4: error log, pacing ladder, careless loss capped.</li>
+            <li>Weeks 5–6: mixed papers under time, targeted review.</li>
+            <li>Week 7: full mock with debrief next day.</li>
+            <li>Week 8: 86 percent, speed at 0.85 target, focus losses under 7 percent.</li>
+          </ol>
+        </div>
+        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+      </div>
+    </section>
+
+    <section id="progress" class="section">
+      <div class="container">
+        <p class="eyebrow">Progress tracker</p>
+        <p class="kicker">We log 5 indicators weekly and send parents a 3-line summary with a tracker screenshot.</p>
+        <ul class="kpi-grid">
+          <li><strong>Score</strong> last test mark</li>
+          <li><strong>Speed</strong> pace vs target</li>
+          <li><strong>Focus</strong> careless loss under 7 percent</li>
+          <li><strong>Coverage</strong> spec mapped and cleared</li>
+          <li><strong>Conversion</strong> practice turning into marks</li>
+        </ul>
+        <div class="tracker-sample">
+          <img src="/assets/tracker-sample.png" alt="Sample weekly tracker table" loading="lazy">
+          <p class="note">Green bands at 85 percent for Score, Speed, Focus. Coverage and Conversion trend week by week.</p>
+        </div>
+        <div class="sla">
+          <h3>Service level</h3>
+          <ul class="bullets">
+            <li>Update and summary sent by 22:00 on lesson day.</li>
+            <li>Messages 08:00–20:00 replied under 60 minutes.</li>
+            <li>Reschedule requests in hours above confirmed within 15 minutes.</li>
+          </ul>
+        </div>
+        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+      </div>
+    </section>
+
+    <section id="how" class="section">
+      <div class="container">
+        <h2>How it works</h2>
+        <ol class="steps">
+          <li><strong>Consult – 15 min, no charge.</strong> Goals and exam board.</li>
+          <li><strong>Diagnostic – 60 min, £30 credited.</strong> You get the tracker baseline.</li>
+          <li><strong>Weekly 90 min.</strong> Same slot, measurable progress.</li>
+        </ol>
+        <p class="note">Ramp-up: first 2 lessons are a fit check. If it is not right, we stop cleanly.</p>
+        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+      </div>
+    </section>
+
+    <section id="pricing" class="section section-tight">
+      <div class="container">
+        <h2>Pricing</h2>
+        <div class="price-list">
+          <div class="price-item"><strong>Diagnostic</strong> – £30 – credited to month 1</div>
+          <div class="price-item"><strong>Monthly retainer</strong> – £360 – weekly 90 min – 12 week minimum</div>
+          <div class="price-item"><strong>Specialist track</strong> – Computer Science plus Further Maths – on request</div>
+        </div>
+        <p class="note">Under 24 h cancellations are charged. One make-up per term with 24 h notice, subject to availability.</p>
+        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+      </div>
+    </section>
+
+    <section id="faq" class="section">
+      <div class="container">
+        <h2>FAQ</h2>
+        <details><summary>Do you set homework</summary><p>Yes. Short drills tied to weak topics. 60–90 minutes per week.</p></details>
+        <details><summary>Which boards</summary><p>Edexcel, OCR, AQA. We map work to the spec line by line.</p></details>
+        <details><summary>What tools do you use</summary><p>Zoom, OneNote or Miro, Excel tracker shared as screenshots each week.</p></details>
+        <details><summary>Can we reschedule</summary><p>With 24 h notice within the term, subject to availability. Under 24 h is charged.</p></details>
+        <details><summary>Parent visibility</summary><p>You get a weekly note and tracker screenshot after each lesson.</p></details>
+        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+      </div>
+    </section>
+
+    <section id="testimonials" class="section section-tight">
+      <div class="container">
+        <h2>Testimonials</h2>
+        <figure class="quote">
+          <blockquote>Philipp rebuilt my algebra and timing. Paper scores went from mid C to solid A.</blockquote>
+          <figcaption>Parent, Year 13, Edexcel Maths</figcaption>
+        </figure>
+        <figure class="quote">
+          <blockquote>Clear structure, no fluff, fast feedback. The weekly tracker made progress obvious.</blockquote>
+          <figcaption>Student, Year 12, Physics</figcaption>
+        </figure>
+        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+      </div>
+    </section>
+  </main>
+
+  <div class="sticky-cta" role="complementary" aria-label="Book a consult">
+    <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+  </div>
 
   <!-- dev-only: cache-busting query while iterating -->
   <script src="/assets/app.js?dev=1" defer></script>
