--- a/core.html
+++ b/core.html
@@ -74,6 +74,8 @@
     </a>
   </section>
 
+  <div class="delimiter delimiter--hero" aria-hidden="true"></div>
+
   <main id="core-content">
     <section id="proof-extra" class="section section-tight">
       <div class="container">
@@ -84,9 +86,10 @@
           <li class="badge">Led Physics Olympiad Society</li>
           <li class="badge">1.5+ years teaching</li>
         </ul>
-        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
       </div>
     </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
     <section id="case" class="section section-tight">
       <div class="container">
@@ -106,9 +109,10 @@
             <li>Week 8: 86 percent, speed at 0.85 target, focus losses under 7 percent.</li>
           </ol>
         </div>
-        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
       </div>
     </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
     <section id="progress" class="section">
       <div class="container">
@@ -133,9 +137,10 @@
             <li>Reschedule requests in hours above confirmed within 15 minutes.</li>
           </ul>
         </div>
-        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
       </div>
     </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
     <section id="how" class="section">
       <div class="container">
@@ -146,9 +151,10 @@
           <li><strong>Weekly 90 min.</strong> Same slot, measurable progress.</li>
         </ol>
         <p class="note">Ramp-up: first 2 lessons are a fit check. If it is not right, we stop cleanly.</p>
-        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
       </div>
     </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
     <section id="pricing" class="section section-tight">
       <div class="container">
@@ -159,9 +165,10 @@
           <div class="price-item"><strong>Specialist track</strong> – Computer Science plus Further Maths – on request</div>
         </div>
         <p class="note">Under 24 h cancellations are charged. One make-up per term with 24 h notice, subject to availability.</p>
-        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
       </div>
     </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
     <section id="faq" class="section">
       <div class="container">
@@ -171,9 +178,10 @@
         <details><summary>What tools do you use</summary><p>Zoom, OneNote or Miro, Excel tracker shared as screenshots each week.</p></details>
         <details><summary>Can we reschedule</summary><p>With 24 h notice within the term, subject to availability. Under 24 h is charged.</p></details>
         <details><summary>Parent visibility</summary><p>You get a weekly note and tracker screenshot after each lesson.</p></details>
-        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
       </div>
     </section>
+
+    <div class="delimiter delimiter--section" aria-hidden="true"></div>
 
     <section id="testimonials" class="section section-tight">
       <div class="container">
@@ -186,14 +194,13 @@
           <blockquote>Clear structure, no fluff, fast feedback. The weekly tracker made progress obvious.</blockquote>
           <figcaption>Student, Year 12, Physics</figcaption>
         </figure>
-        <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
       </div>
     </section>
   </main>
 
-  <div class="sticky-cta" role="complementary" aria-label="Book a consult">
-    <a href="https://calendly.com/philippmathsphysics/consult" class="btn btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
-  </div>
+  <footer class="floating-cta" aria-live="polite" aria-label="Book a consult">
+    <a href="https://calendly.com/philippmathsphysics/consult" class="btn-primary" target="_blank" rel="noopener" data-gtag-event="book_consult_click">Book consult</a>
+  </footer>
 
   <!-- dev-only: cache-busting query while iterating -->
   <script src="/assets/app.js?dev=1" defer></script>
