--- a/core.html
+++ b/core.html
@@ -52,7 +52,7 @@
         <p class="track-overline">Accountable tutoring, consistent success.</p>
         <h1 class="hero-title">A Level Maths and Physics,<br>taught for <span class="u-underline">results</span></h1>
         <p class="hero-sub">Measured outcomes across 5 performance indicators, not just promises.</p>
-        <div class="trust-hook">4×A* | Imperial College Computing (AI) | 295/300 (98%) Maths A Level | 293/320 (92%) Physics A Level </div>
+        <div class="trust-hook">4×A* | Imperial College Computing (AI) | 98% Maths A Level | BPhO Gold </div>
 
         <div class="cta">
           <a class="btn-primary" href="https://calendly.com/philippmathsphysics/consult" target="_blank" rel="noopener" data-gtag-event="book_consult_click" aria-label="Book a consult on Calendly">Book consult</a>
@@ -82,7 +82,8 @@
         <p class="eyebrow">Proof</p>
         <ul class="badge-row">
           <li class="badge">BMO Round 1 Distinction</li>
-          <li class="badge">BPhO Gold Medal</li>
+          <li class="badge">Winning Maths Talk at The Royal Institution</li>
+          <li class="badge">92% Physics A Level</li>
           <li class="badge">Led Physics Olympiad Society</li>
           <li class="badge">1.5+ years teaching</li>
         </ul>
