--- a/core.html
+++ b/core.html
@@ -147,11 +147,11 @@
       <div class="container">
         <h2>How it works</h2>
         <ol class="steps">
-          <li><strong>Consult – 15 min, no charge.</strong> Goals and exam board.</li>
+          <li><strong>Consult – 20 min, no charge.</strong> Goals and exam board.</li>
           <li><strong>Diagnostic – 60 min, £30 credited.</strong> You get the tracker baseline.</li>
           <li><strong>Weekly 90 min.</strong> Same slot, measurable progress.</li>
         </ol>
-        <p class="note">Ramp-up: first 2 lessons are a fit check. If it is not right, we stop cleanly.</p>
+        <p class="note">*Ramp-up policy*: first 2 lessons are a fit check. If it is not right, we stop cleanly.</p>
       </div>
     </section>
 
