--- a/core.html
+++ b/core.html
@@ -151,7 +151,7 @@
           <li><strong>Diagnostic – 60 min, £30 credited.</strong> You get the tracker baseline.</li>
           <li><strong>Weekly 90 min.</strong> Same slot, measurable progress.</li>
         </ol>
-        <p class="note">*Ramp-up policy*: first 2 lessons are a fit check. If it is not right, we stop cleanly.</p>
+        <p class="note"><strong>Ramp-up policy</strong>: first 2 lessons are a fit check. If it is not right, we stop cleanly.</p>
       </div>
     </section>
 
